--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "nodejs-boilerplate",
+  "name": "lastfm-client",
   "version": "1.0.0",
-  "description": "",
+  "description": "Fully typed client for interacting with the last.fm API.",
   "main": "dist/index.js",
   "scripts": {
     "test": "jest",
@@ -10,18 +10,31 @@
     "build": "npm run clean && tsc",
     "prepack": "npm run build"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com:sindrekjr/lastfm-client.git"
+  },
+  "keywords": [
+    "lastfm",
+    "music",
+    "api"
+  ],
   "author": "sindrekjr",
   "license": "Unlicense",
+  "bugs": {
+    "url": "https://github.com/sindrekjr/lastfm-client/issues"
+  },
+  "homepage": "https://github.com/sindrekjr/lastfm-client#readme",
   "devDependencies": {
-    "@types/jest": "^26.0.15",
-    "@types/node": "^14.14.9",
-    "@typescript-eslint/eslint-plugin": "^4.8.1",
-    "@typescript-eslint/parser": "^4.8.1",
-    "eslint": "^7.14.0",
-    "eslint-plugin-jest": "^24.1.3",
-    "jest": "^26.6.3",
-    "ts-jest": "^26.4.4",
-    "typescript": "^4.1.2",
-    "typescript-eslint": "0.0.1-alpha.0"
+    "@types/jest": "^27.0.1",
+    "@types/node": "^16.6.2",
+    "@typescript-eslint/eslint-plugin": "^4.29.2",
+    "@typescript-eslint/parser": "^4.29.2",
+    "eslint": "^7.32.0",
+    "eslint-plugin-jest": "^24.4.0",
+    "jest": "^27.0.6",
+    "ts-jest": "^27.0.5",
+    "typescript": "^4.3.5",
+    "typescript-eslint": "^0.0.1-alpha.0"
   }
 }
