--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "@types/jest": "^27.0.1",
     "@types/node": "^16.6.2",
+    "@types/node-fetch": "^2.5.12",
     "@typescript-eslint/eslint-plugin": "^4.29.2",
     "@typescript-eslint/parser": "^4.29.2",
     "dotenv": "^10.0.0",
@@ -38,5 +39,8 @@
     "ts-jest": "^27.0.5",
     "typescript": "^4.3.5",
     "typescript-eslint": "^0.0.1-alpha.0"
+  },
+  "dependencies": {
+    "node-fetch": "^2.6.1"
   }
 }
