--- a/package.json
+++ b/package.json
@@ -41,6 +41,6 @@
     "typescript-eslint": "^0.0.1-alpha.0"
   },
   "dependencies": {
-    "node-fetch": "^2.6.1"
+    "isomorphic-unfetch": "^3.1.0"
   }
 }
