--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lastfm",
+  "name": "@sindrekjr/lastfm",
   "version": "1.0.0",
   "description": "Fully typed client for interacting with the last.fm API.",
   "main": "dist/index.js",
