--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "@sindrekjr/lastfm",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "Fully typed client for interacting with the last.fm API.",
   "main": "dist/index.js",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
+  },
   "scripts": {
     "start": "node dist",
     "test": "jest",
